Gatsby Project Page: completed and fixed the footer links from wrapping

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -31,6 +31,12 @@
   font-family: 'PT Sans', sans-serif;
 }
 
+.footer__links {
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+}
+
 .footer__link:hover {
   color: rgba(255,255,255,1);
   transition: 0.1s ease-in-out;
